--- a/company/templates/base.html
+++ b/company/templates/base.html
@@ -8,9 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <!-- Fav Icon  -->
-    <link rel="shortcut icon" href="images/favicon.png">
+    <link rel="shortcut icon" href="{% static 'images/favicon.png' %}">
     <!-- Site Title  -->
-    <title>Multicoin | Index</title>
+    <title>Multicoin | Home</title>
     <!-- Bundle and Base CSS -->
     <link rel="stylesheet" href="{% static 'main/css/vendor.bundle.css' %}?ver=1930">
     <link rel="stylesheet" href="{% static 'main/css/style-dark.css' %}?ver=1930" id="changeTheme">
@@ -32,9 +32,10 @@
                         <div class="header-logo logo animated" data-animate="fadeInDown" data-delay=".65">
                             <a href="{% url 'index' %}" class="logo-link">
                                 <img class="logo-dark" src="{% static 'images/logo.png' %}"
-                                    srcset="images/logo2x.png 2x" alt="logo">
-                                <img class="logo-light" src="{% static 'images/logo-white.png' %}"
-                                    srcset="images/logo-white2x.png 2x" alt="logo">
+                                    srcset="{% static 'images/logo.png' %} 2x" alt="logo">
+
+                                <img class="logo-light" src="{% static 'images/logo.png' %}"
+                                    srcset="{% static 'images/logo.png' %} 2x" alt="logo">
                             </a>
                         </div>
 
