--- a/static/main/css/style.css
+++ b/static/main/css/style.css
@@ -640,7 +640,7 @@ h6, .h6, .fz-6 { font-size: 0.94rem; }
 
 .text-primary { color: #122272 !important; }
 
-.text-light { color: #ffffff !important; }
+.text-light { color: #ffff !important; }
 
 .text-primary-alt { color: #1940b0 !important; }
 
