--- a/company/templates/base.html
+++ b/company/templates/base.html
@@ -129,7 +129,9 @@
         </footer>
     </div>
 
-    <div class="preloader"><span class="spinner spinner-round"></span></div>
+    <div class="preloader  preloader-alt " >
+        <span class="spinner spinner-round"></span>
+    </div>
 
     <!-- JavaScript -->
     <script src="{% static 'main/js/jquery.bundle.js' %}" ?ver=1930"></script>
