--- a/Users/templates/settings.html
+++ b/Users/templates/settings.html
@@ -14,9 +14,9 @@
             <li class="nav-item">
                 <a class="nav-link" data-toggle="tab" href="#password-opt">Change Password</a>
             </li>
-            <!--li class="nav-item">
+            <li class="nav-item">
                 <a class="nav-link" href="{% url 'kyc' %}">KYC Application</a>
-            </li-->
+            </li>
           
             
         </ul><!-- .nav-tabs-line -->
