--- a/Users/templates/user-dashboard-base.html
+++ b/Users/templates/user-dashboard-base.html
@@ -36,7 +36,7 @@
 
                     <div class="site-logo">
                         <a href="{% url 'index' %}" class="site-brand">
-                            <img style="height:41px;width:160px" src="{% static 'images/logo-dark.png' %}" alt="logo" srcset="{% static 'images/logo-dark.png' %} 2x">
+                            <img style="height:41px;width:160px" src="{% static 'img/logo.png' %}" alt="logo" srcset="{% static 'img/logo.png' %} 2x">
                         </a>
                     </div><!-- .site-logo -->
                     
