--- a/company/templates/index.html
+++ b/company/templates/index.html
@@ -968,7 +968,7 @@
             </div><!-- .block @e -->
         </div>
     </section>
-    <!-- // -->
+    <!-- // ->
     <section class="section section-contact bg-theme tc-light" id="contact">
         <div class="container">
             <div class="section-head text-center wide-auto-sm">
@@ -976,8 +976,8 @@
                 </h2>
                 <p class="animated" data-animate="fadeInUp" data-delay=".2">Any question? Reach out to us and we’ll get
                     back to you shortly.</p>
-            </div><!-- .section-head @e -->
-            <!-- Block @s -->
+            </div><!-- .section-head @e ->
+            <!-- Block @s ->
             <div class="nk-block block-contact">
                 <div class="row justify-content-center text-center">
                     <div class="col-xl-8 col-lg-10">
@@ -1001,7 +1001,7 @@
                                 </div>
                             </li>
                         </ul>
-                    </div><!-- .col -->
+                    </div><!-- .col ->
                     <div class="col-xl-8 col-lg-10">
                         <div class="contact-wrap p-0">
                             <form id="contact-form-01" class="contact-form nk-form-submit" action="form/contact.php"
@@ -1030,9 +1030,9 @@
                                 </div>
                             </form>
                         </div>
-                    </div><!-- .col -->
-                </div><!-- .row -->
-            </div><!-- .block @e -->
+                    </div><!-- .col ->
+                </div><!-- .row ->
+            </div><!-- .block @e ->
         </div>
     </section>
     <!-- // -->
