--- a/company/templates/base.html
+++ b/company/templates/base.html
@@ -67,7 +67,7 @@
                                     <li class="menu-item"><a class="menu-link nav-link" href="#faqs">FAQs</a>
                                     </li>
 
-                                    <li class="menu-item"><a class="menu-link nav-link" href="#contact">Contact</a></li>
+                                    <!--li class="menu-item"><a class="menu-link nav-link" href="#contact">Contact</a></li-->
                                 </ul>
                                 <ul class="menu-btns animated" data-animate="fadeInDown" data-delay=".85">
                                     {% if user.is_autenticated %}
