--- a/Users/templates/dashboard.html
+++ b/Users/templates/dashboard.html
@@ -16,9 +16,9 @@
                                 <li><span>${{user.user_wallet.current_balance|intcomma}}</span></li>
                               
                             </ul>
-                            <div  class="tile-title">
+                            <div  class="tile-title" style="color: white;">
                                 Available Balance : 
-                                <span style="">
+                                <span style="color: white;">
                                     ${{user.user_wallet.available_balance|intcomma}}
                                 </span><br>
                                 
