--- a/Users/templates/user-dashboard-base.html
+++ b/Users/templates/user-dashboard-base.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" href="{% static 'user-dashboard/css/vendor.bundle.css' %}?ver=101">
 	<!-- Custom styles for this template -->
 	<link rel="stylesheet" href="{% static 'user-dashboard/css/style.css' %}?ver=101">
-	
+    <link rel="stylesheet" href="{% static 'user-dashboard/css/dark.css' %}?ver=101">
 </head>
 
 <body class="user-dashboard">
@@ -87,7 +87,7 @@
 
                         <li class="dropdown topbar-action-item topbar-action-user">
                             {% if user.get_picture %}
-                            <a href="#" data-toggle="dropdown"> <img class="icon" src="{{user.get_picture}}" alt="thumb"> </a>
+                            <a href="#" data-toggle="dropdown" > <img class="icon" src="{{user.get_picture}}" alt="thumb"> </a>
                             {% endif %}
                             <div class="dropdown-menu dropdown-menu-right">
                                 <div class="user-dropdown">
@@ -117,11 +117,9 @@
                     <div class="user-sidebar-overlay"></div>
                     <div class="user-box d-none d-lg-block">
                         <div class="user-image">
-                            {% if user.get_picture %}
-                            <img style="border-radius: 50%;height: 80px;width:80px;" src="{{user.get_picture}}" alt="thumb">
-                            {% endif %}
+                       
                         </div>
-                        <h6 class="user-name">{{user.name}}</h6>
+                        <h6 class="user-name">Welcome {{user.name}}!</h6>
                         <div class="user-uid">Unique ID: <span>{{user.unique_id}}</span></div>
                         <ul class="btn-grp guttar-10px">
                             {% if not user.email_verified %}
