--- a/Users/templates/dashboard.html
+++ b/Users/templates/dashboard.html
@@ -22,10 +22,10 @@
                                     ${{user.user_wallet.available_balance|intcomma}}
                                 </span><br>
                                 
-                                {% if pending_deposit %}
+                                {% if True %}
                                 Pending Deposit : 
-                                <span style="color: green;">
-                                    +${{pending_deposit}}
+                                <span style="color: greenyellow;font-weight: 700;">
+                                    +${{pending_deposit}}234
                                 </span><br>
                                
                                 {% endif %}
