--- a/company/templates/base.html
+++ b/company/templates/base.html
@@ -18,18 +18,22 @@
     <link rel="stylesheet" href="{% static 'main/css/theme.css' %}?ver=1930">
     <link rel="stylesheet" href="{% static 'main/css/extra.css' %}">
     <link href="{% static 'main/css/vendors/owlcarousel/assets/owl.carousel.min.css' %}" rel="stylesheet">
+
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
-        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+        var Tawk_API = Tawk_API || {},
+            Tawk_LoadStart = new Date();
         (function () {
-            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+            var s1 = document.createElement("script"),
+                s0 = document.getElementsByTagName("script")[0];
             s1.async = true;
-            s1.src = 'https://embed.tawk.to/641b07fd4247f20fefe761ac/1gs4pedqp';
+            s1.src = 'https://embed.tawk.to/6700131c37379df10df1e279/1i9c4lam5';
             s1.charset = 'UTF-8';
             s1.setAttribute('crossorigin', '*');
             s0.parentNode.insertBefore(s1, s0);
         })();
     </script>
+    <!--End of Tawk.to Script-->
     <!--End of Tawk.to Script-->
 </head>
 
