--- a/Users/templates/dashboard.html
+++ b/Users/templates/dashboard.html
@@ -25,7 +25,7 @@
                                 {% if True %}
                                 Pending Deposit : 
                                 <span style="color: greenyellow;font-weight: 700;">
-                                    +${{pending_deposit}}234
+                                    +${{pending_deposit}}
                                 </span><br>
                                
                                 {% endif %}
