--- a/company/templates/500.html
+++ b/company/templates/500.html
@@ -42,9 +42,10 @@
                                 <div class="piller-two">
                                     <img src="{% static 'images/piler-b.png' %}" alt="graphic">
                                 </div>
-                                <h2 class="title-xxl-grad">500</h2>
-                                <h5 class="pb-2">Opps! A Server Error Occured</h5>
-                                <p class="">This is an error from or own end, please contact customer support.</p>
+                                <h2 class="title-xxl-grad">High Traffic Alert</h2>
+                                <h5 class="pb-2">Oops! Our servers are currently experiencing heavy traffic.</h5>
+                                <p class="">We're working hard to accommodate the high demand. Please try again in a few minutes or contact customer support if the issue persists. Thank you for your patience!</p>
+                                
                                 <a href="{% url 'index' %}" class="btn btn-grad btn-md btn-round">Back to home</a>
                             </div> 
                         </div>
